# app-capanel-doc

./: .gitignore  Makefile  README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: d98dd8ec85a3_edit_replace_id_integers_in_all_models_.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: censusdata.py  items.py  login.py  private.py  schools.py  users.py  utils.py
backend/app/core/: config.py  db.py  security.py
backend/app/utility/: crud.py  models.py  utils.py
backend/docs/: Makefile
backend/docs/source/: all-modules.rst  conf.py  expectations.rst  goals.rst  index.md
backend/docs/source/_extension/: component_directive.py  gallery_directive.py
backend/docs/source/contribute/: index.rst  install.rst
backend/docs/source/developer-guide/: AGENTS.md  all-modules.rst  database-setup.rst  deployment.md  development.md  environment-variables.rst  index.rst  python-beginner-guide.rst  run-application.rst  sphinx.rst  storybook.rst
backend/docs/source/developer-guide/install/: backend-install-docker.rst  backend-install-linux.rst  backend-install-mac.rst  backend-install-windows.rst  index.rst
backend/docs/source/feature/: f1.rst  f3.rst  f6.rst  index.rst  user-stories.rst
backend/docs/source/feature/e1/: f1.rst  f2.rst  f4.rst  f5.rst  index.rst
backend/docs/source/user-guide/: index.rst  user-stories.rst
backend/docs/source/user-story/: index.rst  u4.rst
backend/docs/source/user_guide/: csv-upload.rst  epics.rst  get-started.rst  index.rst
backend/scripts/: backend_pre_start.py  check_table.py  initial_data.py  prestart.sh  tests_pre_start.py
backend/tests/: conftest.py
backend/tests/api/routes/: test_items.py  test_login.py  test_private.py  test_users.py
backend/tests/crud/: test_user.py
backend/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
backend/tests/utils/: item.py  user.py  utils.py
(+338 files in other folders)
